--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 <body>
     
     <p> Olá bem vindo </p>
-    <div id="main-box"></div>
+    <div id="main-box">
+        <div id="box-time">
+            <h1 id="minutos"> 15 : 00 </h1>
+            <button id="start"> iniciar </button>    
+            <button id="start"> iniciar </button>  
+            <button id="start"> iniciar </button>  
+        </div>
+    </div>
 
 </body>
 
