--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
 </head>
 
 <body>
-    
-    <p> Olá bem vindo </p>
+
     <div id="main-box">
         <div id="box-time">
             <h1 id="minutos"> 15 : 00 </h1>
-            <button id="start"> iniciar </button>    
-            <button id="start"> iniciar </button>  
-            <button id="start"> iniciar </button>  
+            <button id="start" onclick="descerContador()"> iniciar </button>    
         </div>
     </div>
 
